Added standard AdminUserResponse for admin portal
